--- a/src/main/resources/templates/user/createReminder.html
+++ b/src/main/resources/templates/user/createReminder.html
@@ -1,28 +1,89 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>RemindLog - Ny Påmindelse</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css}"/>
+    <link rel="stylesheet" href="/static/styles/styles.css" th:href="@{/styles/styles.css}"/>
 </head>
+
 <body>
-<a href="/user/home">Home</a>
-<h1>Create Reminder page</h1>
+<div class="header"></div>
+<div class="menu-bar">
+    <div class="icon-bar">
+        <a class="active" href="#"><i class="fa fa-registered"></i></a>
+        <a href="#"><i class="fa fa-bank"></i><p>Home</p></a>
+        <a href="#"><i class="fa fa-plus"></i><p>Ny påmindelse</p></a>
+        <a href="#"><i class="fa fa-eye"></i><p>Vis huskeliste</p></a>
+        <a href="#"><i class="fa fa-wrench"></i><p>Rediger bruger</p></a>
+        <a href="#"><i class="fa fa-globe"></i><p>Log out</p></a>
+    </div>
+</div>
 
-<form method="POST" th:action="@{/user/createReminder}">
-    <label>Name of note:
-        <input type="text" name="name" placeholder="name" required min="3" max="25"/>
-    </label><br>
-    <label>Note text:
-        <textarea name="description"></textarea>
-    </label><br>
-    <label>Date:
-        <input type="text" name="date" placeholder="date" required max="15"/>
-    </label><br>
-    <label>Time:
-        <input type="text" name="time" placeholder="time" required max="15"/>
-    </label><br>
+<div class="content">
+    <div class="button-bar">
+        <a href="#" class="btn">Rediger påmindelse</a>
+        <a href="#" class="btn">Slet påmindelse</a>
+        <a href="#" class="btn">Opret gruppe</a>
+        <a href="#" class="btn">Vælg gruppe</a>
+    </div>
+    <h1>Ny påmindelse</h1>
 
-    <input type="submit" value="Opret Reminder" />
-</form>
+    <form method="POST" th:action="@{/user/createReminder}" Newlog="log">
+        <ul class="Newlog">
+
+            <li>
+                <label>Emne<span class="required">*</span></label>
+                <input type="text" name="name" class="field-long" />
+            </li>
+            <!--<li>-->
+                <!--<label>Vælg gruppe <span class="required">*</span></label>-->
+                <!--<select name="field5" class="field-select">-->
+                    <!--<option value="gruppe1">Egen huskeliste</option>-->
+                    <!--<option value="gruppe1">Gruppe1</option>-->
+                    <!--<option value="gruppe2">Gruppe2</option>-->
+                <!--</select>-->
+            <!--</li>-->
+            <li>
+                <label>Dato<span class="required">*</span></label>
+                <input id="date" type="date" name="date" class="field-long" />
+            </li>
+            <li>
+                <label>Tid<span class="required">*</span></label>
+                <input id="time" type="time" name="time" class="field-long" />
+            </li>
+            <li>
+                <label>Note (max 400 char.) </label>
+                <textarea name="description" class="field-long field-textarea"></textarea>
+            </li>
+            <li>
+                <input type="submit" value="Gem påmindelse" />
+            </li>
+        </ul>
+    </form>
+</div>
 </body>
+
+<!--<body>-->
+<!--<a href="/user/home">Home</a>-->
+<!--<h1>Create Reminder page</h1>-->
+
+<!--<form method="POST" th:action="@{/user/createReminder}">-->
+    <!--<label>Name of note:-->
+        <!--<input type="text" name="name" placeholder="name" required min="3" max="25"/>-->
+    <!--</label><br>-->
+    <!--<label>Note text:-->
+        <!--<textarea name="description"></textarea>-->
+    <!--</label><br>-->
+    <!--<label>Date:-->
+        <!--<input type="text" name="date" placeholder="date" required max="15"/>-->
+    <!--</label><br>-->
+    <!--<label>Time:-->
+        <!--<input type="text" name="time" placeholder="time" required max="15"/>-->
+    <!--</label><br>-->
+
+    <!--<input type="submit" value="Opret Reminder" />-->
+<!--</form>-->
+<!--</body>-->
 </html>
