Update Reminder fixed
Update Reminder works better now, improved performance and better practices used

--- a/src/main/resources/templates/user/viewReminders.html
+++ b/src/main/resources/templates/user/viewReminders.html
@@ -12,9 +12,9 @@
 <div class="menu-bar">
     <div class="icon-bar">
         <a class="active" href="#"><i class="fa fa-registered"></i></a>
-        <a href="#"><i class="fa fa-bank"></i><p>Home</p></a>
-        <a href="#"><i class="fa fa-plus"></i><p>Ny påmindelse</p></a>
-        <a href="#"><i class="fa fa-eye"></i><p>Vis huskeliste</p></a>
+        <a href="/user/home"><i class="fa fa-bank"></i><p>Home</p></a>
+        <a href="/user/createReminder"><i class="fa fa-plus"></i><p>Ny påmindelse</p></a>
+        <a href="/user/viewReminders"><i class="fa fa-eye"></i><p>Vis huskeliste</p></a>
         <a href="#"><i class="fa fa-wrench"></i><p>Rediger bruger</p></a>
         <a th:href="@{/logout}"><i class="fa fa-globe"></i><p>Log out</p></a>
     </div>
@@ -56,7 +56,12 @@
                     <input type="submit" class="btn-data-blue" value="Share" />
                 </td>
                 <td>
-                    <a th:href="@{'/user/editReminder/' + ${Reminder.name}}" class="btn-data">Edit</a>
+                    <!--TEST new solution to fix missing CSS on button-->
+                    <a th:href="@{'/user/editReminder/' + ${Reminder.name}}">
+                        <!--Pathvariable might not be needed, consider removing-->
+                        <input type="button" value="Edit" class="btn-data">
+                    </a>
+                    <!--<a th:href="@{'/user/editReminder/' + ${Reminder.name}}" class="btn-data">Edit</a>-->
                 </td>
                 <td>
                     <input type="submit" class="btn-data-red" value="Slet" />
