--- a/src/main/resources/templates/user/viewReminders.html
+++ b/src/main/resources/templates/user/viewReminders.html
@@ -57,14 +57,17 @@
                 </td>
                 <td>
                     <!--TEST new solution to fix missing CSS on button-->
-                    <a th:href="@{'/user/editReminder/' + ${Reminder.name}}">
+                    <a th:href="@{'/user/editReminder/' + ${Reminder.id}}">
                         <!--Pathvariable might not be needed, consider removing-->
                         <input type="button" value="Edit" class="btn-data">
                     </a>
                     <!--<a th:href="@{'/user/editReminder/' + ${Reminder.name}}" class="btn-data">Edit</a>-->
                 </td>
                 <td>
-                    <input type="submit" class="btn-data-red" value="Slet" />
+                    <!--<input type="submit" class="btn-data-red" value="Slet" />-->
+                    <a th:href="@{'/user/deleteReminder/' + ${Reminder.id}}">
+                        <input type="button" value="Slet" class="btn-data">
+                    </a>
                 </td>
             </tr>
             </tbody>
