--- a/src/main/resources/templates/user/viewReminders.html
+++ b/src/main/resources/templates/user/viewReminders.html
@@ -15,7 +15,7 @@
         <a href="/user/home"><i class="fa fa-bank"></i><p>Home</p></a>
         <a href="/user/createReminder"><i class="fa fa-plus"></i><p>Ny påmindelse</p></a>
         <a href="/user/viewReminders"><i class="fa fa-eye"></i><p>Vis huskeliste</p></a>
-        <a href="#"><i class="fa fa-wrench"></i><p>Rediger bruger</p></a>
+        <a href="/user/editUser"><i class="fa fa-wrench"></i><p>Rediger bruger</p></a>
         <a th:href="@{/logout}"><i class="fa fa-globe"></i><p>Log out</p></a>
     </div>
 </div>
