--- a/src/main/resources/templates/createUser.html
+++ b/src/main/resources/templates/createUser.html
@@ -27,12 +27,12 @@
             <div class="login-screen">
                 <div class="login-form">
                     <label for="username"> </label>:
-                    <input type="text" class="login-field" id="username" name="username" placeholder="Brugernavn" autofocus="autofocus" />
+                    <input type="text" class="login-field" id="username" name="username" max="25" placeholder="Brugernavn" autofocus="autofocus" />
                     <label for="email"> </label>:
-                    <input type="text" class="login-field" id="email" name="email" placeholder="Email" autofocus="autofocus" />
+                    <input type="email" class="login-field" id="email" name="email" max="35" placeholder="Email" autofocus="autofocus" />
                     <div class="control-group">
                         <label for="password"> </label>:
-                        <input type="password" class="login-field" id="password" placeholder="Password" name="password" />
+                        <input type="password" class="login-field" id="password" min="5" max="25" placeholder="Password" name="password" />
                     </div>
                     <input type="submit" class="btn" value="Opret bruger" />
                 </div>
