--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,10 +27,10 @@
                 <div class="app-title">Remindlog log in</div>
                 <div class="login-form">
                     <label for="username"> </label>:
-                    <input type="text" class="login-field" id="username" name="username" placeholder="Brugernavn" autofocus="autofocus" />
+                    <input type="text" class="login-field" id="username" name="username" max="25" placeholder="Brugernavn" autofocus="autofocus" />
                     <div class="control-group">
                         <label for="password"> </label>:
-                        <input type="password" class="login-field" id="password" placeholder="Password" name="password" />
+                        <input type="password" class="login-field" id="password" max="25" placeholder="Password" name="password" />
                     </div>
                     <input type="submit" class="btn" value="Log in" />
                     <div class="OpretBruger"><a href="createUser">Opret bruger</a></div>
