--- a/src/main/resources/templates/user/createReminder.html
+++ b/src/main/resources/templates/user/createReminder.html
@@ -26,7 +26,7 @@
         <!--Vurder om disse knapper er nødvendige, ellers skal der være en side med f.eks. slet hvor den manuelt indtastes-->
         <a href="#" class="btn">Rediger påmindelse</a>
         <a href="#" class="btn">Slet påmindelse</a>
-        <a href="#" class="btn">Opret gruppe</a>
+        <a href="/user/createShareGroup" class="btn">Opret gruppe</a>
         <a href="#" class="btn">Vælg gruppe</a>
     </div>
     <h1>Ny påmindelse</h1>
