--- a/src/main/resources/templates/user/editReminder.html
+++ b/src/main/resources/templates/user/editReminder.html
@@ -25,7 +25,7 @@
     <div class="button-bar">
         <a href="#" class="btn">Rediger påmindelse</a>
         <a href="#" class="btn">Slet påmindelse</a>
-        <a href="#" class="btn">Opret gruppe</a>
+        <a href="/user/createShareGroup" class="btn">Opret gruppe</a>
         <a href="#" class="btn">Vælg gruppe</a>
     </div>
     <h1>Ny påmindelse</h1>
