--- a/src/main/resources/templates/user/createShareGroup.html
+++ b/src/main/resources/templates/user/createShareGroup.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>RemindLog - Ny Påmindelse</title>
+    <title>RemindLog - Opret Delingsgruppe</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css}"/>
     <link rel="stylesheet" href="/static/styles/styles.css" th:href="@{/styles/styles.css}"/>
 </head>
-
 <body>
-<!--<div class="header"></div>-->
+
 <div class="menu-bar">
     <div class="icon-bar">
         <a class="active" href="#"><i class="fa fa-registered"></i></a>
@@ -20,16 +19,23 @@
         <a th:href="@{/logout}"><i class="fa fa-globe"></i><p>Log out</p></a>
     </div>
 </div>
-<h1>Velkommen til RemindLog</h1>
 
-<!--<div class="content">-->
-    <!--<div class="button-bar">-->
-        <!--<a href="#" class="btn">Rediger påmindelse</a>-->
-        <!--<a href="#" class="btn">Slet påmindelse</a>-->
-        <!--<a href="/user/createShareGroup" class="btn">Opret gruppe</a>-->
-        <!--<a href="#" class="btn">Vælg gruppe</a>-->
-    <!--</div>-->
-    <!--<h1>Ny påmindelse</h1>-->
-<!--</div>-->
+<div class="content">
+    <h1>Opret Delingsgruppe</h1>
+
+    <form method="POST" th:action="@{/user/createShareGroup}" Newlog="log">
+        <ul class="Newlog">
+
+            <li>
+                <label>Navn<span class="required">*</span></label>
+                <input type="text" name="name" class="field-long" max="30"/>
+            </li>
+            <li>
+                <input type="submit" value="Opret" />
+            </li>
+        </ul>
+    </form>
+</div>
+
 </body>
 </html>
