--- a/src/main/resources/templates/user/editUser.html
+++ b/src/main/resources/templates/user/editUser.html
@@ -21,31 +21,52 @@
     </div>
 </div>
 
-<!--<div class="wrapper">-->
+<div class="content">
+    <h1>Rediger Bruger</h1>
 
-<div class="header">
-
-    <div id="logo">Remindlog</div>
-
+    <form method="POST" th:action="@{/user/editUser}" Newlog="log">
+        <ul class="Newlog">
+            <li>
+                <label>Brugernavn<span></span></label>
+                <input type="text" name="username" class="field-long" max="25" th:value="${theUser.username}"/>
+            </li>
+            <li>
+                <label>Email<span></span></label>
+                <input type="email" name="email" class="field-long" max="35" th:value="${theUser.email}"/>
+            </li>
+            <li>
+                <label>Password<span></span></label>
+                <input type="password" name="password" class="field-long" min="5" max="25"/>
+            </li>
+            <li>
+                <input type="submit" value="Opdater Bruger" />
+            </li>
+        </ul>
+    </form>
 </div>
 
-<h1>Rediger Bruger</h1>
+<!--<div class="header">-->
 
-<!--<p th:if="${loginError}" class="error">Wrong user or password</p>-->
-<form th:action="@{/user/editUser}" method="post">
+    <!--<div id="logo">Remindlog</div>-->
 
-    <!--<input type="hidden" name="id" class="field-long" th:value="${theUser.id}"/>-->
-    <label for="username"> </label>:
-    <input type="text" class="login-field" id="username" name="username" max="25" placeholder="Brugernavn" th:value="${theUser.username}" autofocus="autofocus"/>
-    <label for="email"> </label>:
-    <input type="email" class="login-field" id="email" name="email" max="35" placeholder="Email" th:value="${theUser.email}" autofocus="autofocus"/>
-    <label for="password"> </label>:
-    <input type="password" class="login-field" id="password" min="5" max="25" placeholder="Password" name="password"/>
-
-    <input type="submit" class="btn" value="Rediger bruger"/>
-
-</form>
 <!--</div>-->
+
+<!--<h1>Rediger Bruger</h1>-->
+
+<!--&lt;!&ndash;<p th:if="${loginError}" class="error">Wrong user or password</p>&ndash;&gt;-->
+<!--<form th:action="@{/user/editUser}" method="post">-->
+
+    <!--&lt;!&ndash;<input type="hidden" name="id" class="field-long" th:value="${theUser.id}"/>&ndash;&gt;-->
+    <!--<label for="username"> </label>:-->
+    <!--<input type="text" class="login-field" id="username" name="username" max="25" placeholder="Brugernavn" th:value="${theUser.username}" autofocus="autofocus"/>-->
+    <!--<label for="email"> </label>:-->
+    <!--<input type="email" class="login-field" id="email" name="email" max="35" placeholder="Email" th:value="${theUser.email}" autofocus="autofocus"/>-->
+    <!--<label for="password"> </label>:-->
+    <!--<input type="password" class="login-field" id="password" min="5" max="25" placeholder="Password" name="password"/>-->
+
+    <!--<input type="submit" class="btn" value="Rediger bruger"/>-->
+
+<!--</form>-->
 
 </body>
 </html>
