--- a/src/main/resources/templates/user/editUser.html
+++ b/src/main/resources/templates/user/editUser.html
@@ -36,7 +36,7 @@
             </li>
             <li>
                 <label>Password<span></span></label>
-                <input type="password" name="password" class="field-long" min="5" max="25"/>
+                <input type="password" name="password" class="field-long" min="5" max="25" th:value="null"/>
             </li>
             <li>
                 <input type="submit" value="Opdater Bruger" />
