--- a/src/main/resources/templates/createUser.html
+++ b/src/main/resources/templates/createUser.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>RemindLog - Opret Bruger</title>
+    <title>RemindLog - Create User</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css}"/>
@@ -18,8 +18,8 @@
 
     </div>
 
-    <h1>Opret bruger</h1>
-    <h3>Udfyld nedestående felter</h3>
+    <h1>Create User</h1>
+    <h3>Fill out following fields:</h3>
 
     <!--<p th:if="${loginError}" class="error">Wrong user or password</p>-->
     <form th:action="@{/createUser}" method="post">
@@ -27,14 +27,14 @@
             <div class="login-screen">
                 <div class="login-form">
                     <label for="username"> </label>:
-                    <input type="text" class="login-field" id="username" name="username" max="25" placeholder="Brugernavn" autofocus="autofocus" />
+                    <input type="text" class="login-field" id="username" name="username" min="4" max="25" placeholder="Username" autofocus="autofocus" />
                     <label for="email"> </label>:
-                    <input type="email" class="login-field" id="email" name="email" max="35" placeholder="Email" autofocus="autofocus" />
+                    <input type="email" class="login-field" id="email" name="email" min="4" max="35" placeholder="Email" autofocus="autofocus" />
                     <div class="control-group">
                         <label for="password"> </label>:
                         <input type="password" class="login-field" id="password" min="5" max="25" placeholder="Password" name="password" />
                     </div>
-                    <input type="submit" class="btn" value="Opret bruger" />
+                    <input type="submit" class="btn" value="Create User" />
                 </div>
             </div>
         </div>
