--- a/src/main/resources/templates/user/viewCalendar.html
+++ b/src/main/resources/templates/user/viewCalendar.html
@@ -140,7 +140,7 @@
         <a href="#Liste" class="btn">Show as list</a>
         <a href="#Kalender" class="btn">Show as calendar</a>
     </div>
-    <h1>Huskeliste</h1>
+    <h1>Remindlist</h1>
     <div class="search">
         <input type="search" class="light-table-filter" data-table="order-table" placeholder="Search.."/>
     </div>
